# ConsensusProj

./: .gitignore  .gitmodules  LICENSE  README.md  memo.md  pyproject.toml  setup.py
diagnostics/: check_memory.py
diagonostics/: check_n_compatible_elements.py
docs/: .buildinfo  Consensus.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/.doctrees/: Consensus.doctree  environment.pickle  index.doctree  modules.doctree
docs/_modules/: index.html
docs/_modules/Consensus/: _consensus.html  _simulate_tree.html
docs/_sources/: Consensus.rst.txt
docs/_static/: documentation_options.js
docs/source/: Consensus.rst  conf.py  index.rst  modules.rst
example_notebook/: NeXML.ipynb  example1.ipynb  example_std.ipynb  test_draw.ipynb
scripts/: 20240725_ASTRAL_greedy_pruning.sh  20240725_output_show.sh  20240725_transfer_greedy_pruning.py  20240726_majority_greedy_addprune.sh  20240726_output_addprune_show.sh  20240726_transfer_greedy_addprune.py  20240727_transfer_greedy_addprune_size.py  20240727_transfer_greedy_pruning_size.py  20240802_transfer_greedy_addprune_taxa300.py  20240802_transfer_greedy_pruning_taxa300.py  20240807_transfer_greedy_addprune_taxa.py  ASTRAL_greedy_pruning_signal_high.csv  ASTRAL_greedy_pruning_signal_low.csv  extract_database.py  majority_greedy_addprune_signal_high.csv  majority_greedy_addprune_signal_low.csv  number_of_K.ipynb  number_of_K_takazawa.ipynb  transfer_greedy_addprune.py
src/Consensus/: __init__.py  _booster.py  _c_pruning.py  _consensus.py  _dev_utils.py  _greedy.py  _metrics.py  _simulate_tree.py  _visualize.py  main.py
src/Consensus/example_data/: GTR_edit.nex  GTRgamma_edit.nex  GTRgamma_edit.tre  (+11 more)
tests/: test_base_consensus.py  test_basic.py  test_first_K_match.py  test_greedy.py  test_memory_efficient.py  test_metric.py  test_split_bipartition.py  test_visualize.py
